<resources>
    <string name="app_name">Students</string>

    <string name="name">Фамилия студента</string>
    <string name="course">Курс</string>
    <string name="year">Год рождения</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отменить</string>


    <string name="name_about">Фамилия студента: %s</string>
    <string name="course_about">Курс: %s</string>
    <string name="year_about">Год рождения: %s</string>

    <string name="sort_by_surname">По фамилии</string>
    <string name="sort_by_course">По номеру курса</string>
    <string name="sort_by_year">По году</string>

</resources>